# BackupUSSY

./: .gitignore  CHANGELOG.md  COMPLETED.md  CONTRIBUTING.md  DEVELOPMENT_SUMMARY.md  GITHUB_READY.md  README.md  backupussy.conf.example  backupussy.py  create_release.ps1  create_standalone.ps1  debug_app.ps1  init_git.ps1  install.bat  install.ps1  launch.ps1  package_release.ps1  plan.md  plan2.md  plan3.md  pytest.ini  requirements-dev.txt  requirements.txt  run.bat  run_with_msys2.bat  run_with_msys2.ps1  setup.cfg  test_cli.py  validate_phase2.ps1
.github/workflows/: release.yml
release/: BackupUSSY.bat  CLI_README.md  INSTALL.md  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES.md  VERSION.txt
src/: BackupUSSY.spec  advanced_search.py  archive_manager.py  cli.py  database_init.py  database_manager.py  debug_tape_devices.py  exceptions.py  gui.py  gui_before_fix.py  gui_clean.py  gui_fixed.py  gui_minimal.py  gui_part1.py  gui_part2.py  logger_manager.py  main.py  recovery_manager.py  search_interface.py  tape_browser.py  tape_library.py  tape_manager.py  test_recovery.py  test_runner.py  version.py
src/cli_commands/: archive.py  base.py  manage.py  menu.py  recover.py  search.py  status.py
src/cli_utils/: __init__.py  config.py  logging.py  progress.py
tests/integration/: test_cli_basic.py  test_cli_commands.py  test_menu_system.py
tests/unit/: test_cli_utils.py
