[metadata]
name = backupussy
version = 1.0.0
description = BackupUSSY LTO Tape Backup System
author = Windsurf Engineering
author_email = dev@windsurf.ai
license = Proprietary
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8

install_requires =
    FreeSimpleGUI==5.2.0
    WMI==1.5.1
    argcomplete==3.2.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    backupussy = cli:main
